--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
 			<version>1.13</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>5.5.0</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
